Use JCasUtil methods instead of rolling my own ring